--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  font-family: 'Roboto', sans-serif;
+}
 .container-principal{
   width: 80%;
   margin: auto;
@@ -12,9 +15,8 @@
 /* End Common */
 
 /* Start Header */
-header{;
+header{
   margin-bottom: 30px;
-
 }
 .logo img{
   width: 15%;
@@ -29,14 +31,41 @@ header{;
   text-decoration: none;
   text-transform: uppercase;
   color: gray;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 /* End Header */
 
+/* Start Main */
+.overlay-brown{
+  background-color: rgba(155, 141, 136, 0.418);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  border-radius: 10px;
+  z-index: 1;
+}
 .first-container{
-  height: 400px;
-  background-color: rgb(221, 208, 110);
-  margin-bottom: 3%;
+  margin-bottom: 30px;
+  height: 450px;
+  position: relative;
+}
+.first-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  position: absolute;
+}
+.text{
+  width: 40%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-left: 40px;
+  margin-bottom: 60px;
+  color: #fff;
+  z-index: 2;
+
 }
 .second-container{
   height: 600px;
