--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ header{
 }
 /* End Header */
 
-/* Start Main */
+/* Start Banner */
 .overlay-brown{
-  background-color: rgba(155, 141, 136, 0.418);
   height: 100%;
   width: 100%;
+  background-color: rgba(117, 91, 82, 0.418);
   position: absolute;
   border-radius: 10px;
   z-index: 1;
@@ -65,45 +65,56 @@ header{
   margin-bottom: 60px;
   color: #fff;
   z-index: 2;
+}
+/* End Banner */
 
-}
+/* Start Title Container */
 .second-container{
-  height: 600px;
-  background-color: rgb(0, 123, 255); 
-  margin-bottom: 1%;
+  margin-bottom: 200px;
 }
-.title-content{
-  height: 15%;
-  background-color: rgb(161, 201, 227);
+.title-content h1{
+  font-size: 2.5em;
 }
-.sx , .center, .dx{
-  height: 98%;
-  background-color: rgb(161, 201, 227);
+.title-content span{
+  color: gray;
 }
-.sx, .dx{
+/* End Title Container */
+
+/* Start Content Sx */
+.overlay-gray{
+  background-color: rgba(92, 92, 92, 0.144);
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  z-index: 1;
+}
+.small-image img{
+  width: 100%;
+  height: 200px;
+  position: relative;
+  z-index: 0;
+  object-fit: cover;
+}
+.box-sx , .box-dx{
+  height: 100%;
+  position: relative;
+  margin-top: 40px;
   width: 20%;
 }
-.sx, .center{
-  float: left;
+.text-content h3{
+  margin: 15px 0;
 }
 .center{
   margin-left: 2.5%;
-  width: 55%;
+  width: 50%;
 }
-.dx{
-  float: right;
-}
-.content{
-  margin-top: 2%;
-}
-.container:after {
+.second-container:after {
   content: "";
   clear: both;
   display: table;
 }
-.container{
-  height: 80%;
-}
+
 footer{
   height: 50px;
   background-color: rgb(125, 8, 255);
