--- a/style.css
+++ b/style.css
@@ -69,9 +69,6 @@ header{
 /* End Banner */
 
 /* Start Title Container */
-.second-container{
-  margin-bottom: 200px;
-}
 .title-content h1{
   font-size: 2.5em;
 }
@@ -101,20 +98,41 @@ header{
   position: relative;
   margin-top: 40px;
   width: 20%;
+  float: left;
 }
 .text-content h3{
   margin: 15px 0;
 }
-.center{
+/* End Content Sx */
+
+/* Start Content center */
+.box-center{
   margin-left: 2.5%;
   width: 50%;
+  float: left;
+  margin-top: 40px;
+}
+.medium-image img{
+  object-fit: cover;
+  height: 200px;
+}
+.image-center{
+  width: 50%;
+  height: 200px;
+}
+.overlay-gray-middle{
+  background-color: rgba(92, 92, 92, 0.144);
+  position: absolute;
+  width: 50%;
+  height: 200px;
+  border-radius: 10px;
+  z-index: 1;
 }
 .second-container:after {
   content: "";
   clear: both;
   display: table;
 }
-
 footer{
   height: 50px;
   background-color: rgb(125, 8, 255);
