--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body{
 
 .second-container{
   width: 100%;
+  color: gray;
+}
+h3{
+  color: #000;
 }
 /* End Common */
 
@@ -75,13 +79,14 @@ header{
 /* Start Title Container */
 .title-content h1{
   font-size: 2.5em;
+  color: #000;
 }
 .title-content span{
   color: gray;
 }
 /* End Title Container */
 
-/* Start Content Sx */
+/* Start Content Sx and Dx */
 .overlay-gray{
   background-color: rgba(92, 92, 92, 0.144);
   position: absolute;
@@ -107,12 +112,12 @@ header{
 .text-content h3{
   margin: 15px 0;
 }
-/* End Content Sx */
+/* End Content Sx and Dx*/
 
 /* Start Content center */
 .box-center{
   margin-left: 2.5%;
-  width: 50%;
+  width: 55%;
   float: left;
   margin-top: 40px;
   margin-right: 2.5%;
@@ -122,10 +127,14 @@ header{
   object-fit: cover;
   height: 200px;
 }
+.medium-image{
+  width: 100%;
+  position: relative;
+}
 .overlay-gray-middle{
   background-color: rgba(92, 92, 92, 0.144);
   position: absolute;
-  width: 40%;
+  width: 100%;
   height: 200px;
   border-radius: 10px;
   z-index: 1;
@@ -135,8 +144,16 @@ header{
   clear: both;
   display: table;
 }
+/* End Content Center */
+
+/* Start Footer */
 footer{
-  height: 50px;
-  background-color: rgb(125, 8, 255);
-  margin-bottom: 3%;
+    margin-top: 40px;
+    text-align: center;
 }
+footer span:after{
+  content: "\2665";
+  color: red;
+  font-size: 20px;
+}
+/* End Footer */
