--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ header{
 .logo img{
   width: 15%;
   margin-bottom: 20px;
+  border-right: 1px solid rgb(226, 225, 225);
+  padding-right: 15px;
 }
 .navigation-bar li{
   list-style: none;
